--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,13 @@
 <html lang="ja">
   <head>
     <mata charset="utf-8">
+    <link rel="stylesheet" href="/reset.css" type='text/css'>
     <link rel="stylesheet" href="/memo.css" type='text/css'>
   </head>
   <body>
     <main>
       <header>
-        <h1><a href="/memo" class="header">メモアプリ</a></h1>
+        <h1><a href="/memos" class="header">メモアプリ</a></h1>
       </header>
       <div>
         <%= yield %>
