--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,5 +1,5 @@
 <section>
-  <form method="post" action="/memo/<%= @id %>/edit">
+  <form method="post" action="/memos/<%= @id %>">
     <div>
       <label class="label">タイトル</label>
       <input type="text" name="title" value="<%= h(@title) %>" class="title_textarea">
