--- a/views/new.erb
+++ b/views/new.erb
@@ -1,5 +1,5 @@
 <section>
-  <form method="post" action="/memo">
+  <form method="post" action="/memos">
     <div>
       <label class="label">タイトル</label>
       <input type="text" name="title" class="title_textarea">
