正しいパスが指定できるように、action に / からのパスを指定した

--- a/views/show.erb
+++ b/views/show.erb
@@ -5,11 +5,11 @@
   <div>
     <p class="memo_text"><%= h(@text) %></p>
   </div>
-  <form method="post" action="<%= @id %>">
+  <form method="post" action="/memos/<%= @id %>">
     <div class="memo-main__button">
       <input type="submit" value="削除" class="delete_button">
       <input type="hidden" name="_method" value="DELETE">
-      <a href="/memo/<%= @id %>/edit" class="edit_button">編集</a>
+      <a href="/memos/<%= @id %>/edit" class="edit_button">編集</a>
     </div>
   </form>
 </section>
