シングルクォーテーションとダブルクォーテーションが混在したため、ダブルクォーテーションに統一した

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <mata charset="utf-8">
-    <link rel="stylesheet" href="/reset.css" type='text/css'>
-    <link rel="stylesheet" href="/memo.css" type='text/css'>
+    <link rel="stylesheet" href="/reset.css" type="text/css">
+    <link rel="stylesheet" href="/memo.css" type="text/css">
   </head>
   <body>
     <main>
