HTMLの記法の修正をした
ダブルクォーテーションに統一した
metaタグの名前変更した
終了タグを追加した

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <mata charset="utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="/reset.css" type="text/css">
     <link rel="stylesheet" href="/memo.css" type="text/css">
   </head>
@@ -14,4 +14,5 @@
         <%= yield %>
       </div>
     </main>
+  </body>
 </html>
