--- a/views/new.erb
+++ b/views/new.erb
@@ -6,7 +6,7 @@
     </div>
     <div>
       <label class="label">内容</label>
-      <textarea name="text" class="text_textarea"></textarea>
+      <textarea name="text" class="text_textfield"></textarea>
     </div>
     <div>
       <input type="submit" value="保存" class="save_button">
