CSSでスタイルを定義しないため、クラスを消去した

--- a/views/show.erb
+++ b/views/show.erb
@@ -1,12 +1,12 @@
 <div class="header">
-  <h2 class="header_title"><%= h(@title) %></h2>
+  <h2><%= h(@title) %></h2>
 </div>
 <section class="memo">
   <div>
     <p class="memo_text"><%= h(@text) %></p>
   </div>
   <form method="post" action="/memos/<%= @id %>">
-    <div class="memo-main__button">
+    <div>
       <input type="submit" value="削除" class="delete_button">
       <input type="hidden" name="_method" value="DELETE">
       <a href="/memos/<%= @id %>/edit" class="edit_button">編集</a>
