クラス名を変更した
GUIがテキストフィールドなため、クラス名を変更した

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -2,7 +2,7 @@
   <form method="post" action="/memos/<%= @id %>">
     <div>
       <label class="label">タイトル</label>
-      <input type="text" name="title" value="<%= h(@title) %>" class="title_textarea">
+      <input type="text" name="title" value="<%= h(@title) %>" class="title_textfield">
     </div>
     <div>
       <label class="label">内容</label>
