--- a/public/memo.css
+++ b/public/memo.css
@@ -59,7 +59,7 @@ body {
   font-weight: bold;
 }
 
-.title_textarea, .text_textfield {
+.title_textfield, .text_textarea {
   display: block;
   color: #000000;
   width: 500px;
