--- a/views/new.erb
+++ b/views/new.erb
@@ -2,11 +2,11 @@
   <form method="post" action="/memos">
     <div>
       <label class="label">タイトル</label>
-      <input type="text" name="title" class="title_textarea">
+      <input type="text" name="title" class="title_textfield">
     </div>
     <div>
       <label class="label">内容</label>
-      <textarea name="text" class="text_textfield"></textarea>
+      <textarea name="text" class="text_textarea"></textarea>
     </div>
     <div>
       <input type="submit" value="保存" class="save_button">
