--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,17 +1,12 @@
-<section>
-  <script>
-    <% if session[:error_message] %>
-      alert("<%= session.delete(:error_message) %>");
-    <% end %>
-  </script>  
+<section>  
   <form method="post" action="/memos/<%= @memo[:id] %>">
     <div>
       <label class="label">タイトル</label>
-      <input type="text" name="title" value="<%= h(@memo[:title]) %>" class="title_textfield">
+      <input type="text" name="title" value="<%= @memo[:title] %>" class="title_textfield" required>
     </div>
     <div>
       <label class="label">内容</label>
-      <textarea name="text" class="text_textarea"><%= h(@memo[:text]) %></textarea>
+      <textarea name="text" class="text_textarea" required><%= @memo[:text] %></textarea>
     </div>
     <div>
       <input type="hidden" name="_method" value="PATCH">
