--- a/views/new.erb
+++ b/views/new.erb
@@ -1,17 +1,12 @@
 <section>
-  <script>
-    <% if session[:error_message] %>
-      alert("<%= session.delete(:error_message) %>");
-    <% end %>
-  </script>
   <form method="post" action="/memos">
     <div>
       <label class="label">タイトル</label>
-      <input type="text" name="title" class="title_textfield">
+      <input type="text" name="title" class="title_textfield" required>
     </div>
     <div>
       <label class="label">内容</label>
-      <textarea name="text" class="text_textarea"></textarea>
+      <textarea name="text" class="text_textarea" required></textarea>
     </div>
     <div>
       <input type="submit" value="保存" class="save_button">
